--- a/styles/main.css
+++ b/styles/main.css
@@ -44,9 +44,8 @@ main {
 aside {
     width: 30%;
     padding: 20px;
-    background-color: #f8f8f8;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+    background-color: transparent; /* No background color */
+    border: none; /* Remove border */
 }
 
 aside h2 {
@@ -70,7 +69,7 @@ section {
 }
 
 section h2 {
-    color: #800000;
+    color: black; /* Make the heading text black */
     font-size: 1.6em;
     margin-bottom: 15px;
 }
@@ -134,6 +133,10 @@ footer {
 
 #nav_menu ul li:hover a {
     background-color: #5a9bd5;
+}
+
+#nav_menu ul li:nth-child(4) a {
+    color: black; /* Change "Stress Relief" tab to black */
 }
 
 /* Media Queries */
